test/Fail/CopatternWithoutFieldName.err
CopatternWithoutFieldName.agda:13.3-8: error: [CopatternHeadNotProjection]
Head of copattern needs to be a projection, but f isn't one
when scope checking the left-hand side f bla in the definition of
bla
